# Project_Programming

./: PROVA.py  README.md
Programming project/real_estate_toolkit/: pyproject.toml  test_scripts.py
Programming project/real_estate_toolkit/src/real_estate_toolkit/data/: cleaner.py  loader.py
real_estate_toolkit/: .gitignore  exploratory.py  from pathlib import Path.py  pyproject.toml
real_estate_toolkit/src/: main.py
real_estate_toolkit/src/real_estate_toolkit/_agent_based_model/: consumers.py  house_market.py  houses.py  simulation.py  simulation.py.
real_estate_toolkit/src/real_estate_toolkit/agent_based_model/: consumers.py  house_market.py  houses.py  simulation.py
real_estate_toolkit/src/real_estate_toolkit/analytics/: exploratory.py
real_estate_toolkit/src/real_estate_toolkit/data/: cleaner.py  descriptor.py  loader.py
real_estate_toolkit/src/real_estate_toolkit/ml_models/: predictor.py
