[tool.poetry]
name = "real-estate-toolkit"
version = "0.1.0"
description = "A toolkit for real estate data analysis"
authors = ["Gerard Álvarez Lladó <gerard.alvarez03@estudiant.upf.edu> , Albert Español Sanabria <albert.espanol01@estudiant.upf.edu> , Adrià Martín Lladó <adria.martin01@estudiant.upf.edu>"]
readme = "README.md"
packages = [{include = "real_estate_toolkit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"
polars = "^1.16.0"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
